src/objects/SREC_Registry_Unit__c.object
<CustomObject>
    <description>Each SREC Registry Unit Record corresponds to a single Unit ID in an SREC Registry (GATS, GIS, etc.)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Account of the Owner/Representative of the SREC Registry Unit</description>
        <inlineHelpText>The Account of the Owner/Representative of the SREC Registry Unit</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SREC Registry Units</relationshipLabel>
        <relationshipName>SREC_Registry_Units</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Astrum_Estimated_Annual_Production_kWh__c</fullName>
        <description>Roll-up summary of estimated annual production from related Installed Systems</description>
        <inlineHelpText>Roll-up summary of estimated annual production from related Installed Systems</inlineHelpText>
        <label>Astrum Estimated Annual Production (kWh)</label>
        <summarizedField>Registry_Unit_Installed_System_Junction__c.Astrum_Est_Annual_Prod_Roll_up__c</summarizedField>
        <summaryForeignKey>Registry_Unit_Installed_System_Junction__c.SREC_Registry_Unit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Astrum_Estimated_Annual_SRECs__c</fullName>
        <description>Roll-up summary of estimated annual SRECs from related Installed Systems</description>
        <inlineHelpText>Roll-up summary of estimated annual SRECs from related Installed Systems</inlineHelpText>
        <label>Astrum Estimated Annual SRECs</label>
        <summarizedField>Registry_Unit_Installed_System_Junction__c.Astrum_Est_Annual_SRECs_Roll_up__c</summarizedField>
        <summaryForeignKey>Registry_Unit_Installed_System_Junction__c.SREC_Registry_Unit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Certification_Number_DC__c</fullName>
        <description>SREC Registry Unit certification number for participation in the DC RPS Program</description>
        <inlineHelpText>SREC Registry Unit certification number for participation in the DC RPS Program</inlineHelpText>
        <label>Certification Number - DC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_DE__c</fullName>
        <description>SREC Registry Unit certification number for participation in the DE RPS Program</description>
        <inlineHelpText>SREC Registry Unit certification number for participation in the DE RPS Program</inlineHelpText>
        <label>Certification Number - DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_IL__c</fullName>
        <description>SREC Registry Unit certification number for participation in the IL RPS Program</description>
        <inlineHelpText>SREC Registry Unit certification number for participation in the IL RPS Program</inlineHelpText>
        <label>Certification Number - IL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_MD__c</fullName>
        <description>SREC Registry Unit certification number for participation in the MD RPS Program</description>
        <inlineHelpText>SREC Registry Unit certification number for participation in the MD RPS Program</inlineHelpText>
        <label>Certification Number - MD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_NJ__c</fullName>
        <description>SREC Registry Unit certification number for participation in the NJ RPS Program</description>
        <inlineHelpText>SREC Registry Unit certification number for participation in the NJ RPS Program</inlineHelpText>
        <label>Certification Number - NJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_OH__c</fullName>
        <description>SREC Registry Unit certification number for participation in the OH RPS Program</description>
        <inlineHelpText>SREC Registry Unit certification number for participation in the OH RPS Program</inlineHelpText>
        <label>Certification Number - OH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_PA__c</fullName>
        <description>SREC Registry Unit certification number for participation in the PA RPS Program</description>
        <inlineHelpText>SREC Registry Unit certification number for participation in the PA RPS Program</inlineHelpText>
        <label>Certification Number - PA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_WV__c</fullName>
        <description>SREC Registry Unit certification number for participation in the WV RPS Program</description>
        <inlineHelpText>SREC Registry Unit certification number for participation in the WV RPS Program</inlineHelpText>
        <label>Certification Number - WV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <description>This is the type Primary Fuel used by the Unit. Typically either photovoltaic (SUN/Solar Photovoltaic) or solar thermal (STH)</description>
        <inlineHelpText>This is the type Primary Fuel used by the Unit. Typically either photovoltaic (SUN/Solar Photovoltaic) or solar thermal (STH)</inlineHelpText>
        <label>Fuel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Solar Photovoltaic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUN</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GATS_System_Name_1__c</fullName>
        <description>This is the first name of the SREC Registry Unit&apos;s name in the GATS Registry two name convention</description>
        <inlineHelpText>This is the first name of the SREC Registry Unit&apos;s name in the GATS Registry two name convention</inlineHelpText>
        <label>GATS System Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GATS_System_Name_2__c</fullName>
        <description>This is the second name of the SREC Registry Unit&apos;s name in the GATS Registry two name convention</description>
        <inlineHelpText>This is the second name of the SREC Registry Unit&apos;s name in the GATS Registry two name convention</inlineHelpText>
        <label>GATS System Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Plant_Unit__c</fullName>
        <description>This is the name of the SREC Registry Unit in the GIS Registry</description>
        <inlineHelpText>This is the name of the SREC Registry Unit in the GIS Registry</inlineHelpText>
        <label>GIS Plant - Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Registration_Date__c</fullName>
        <description>Date SREC Registry Unit was registered in NEPOOL GIS system</description>
        <inlineHelpText>Date SREC Registry Unit was registered in NEPOOL GIS system</inlineHelpText>
        <label>GIS Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Generation_Entry_Type__c</fullName>
        <description>This is the method used to calculate monthly production. Those systems on Production Estimates (Prod Est) follow established production schedule. Those on Actual report actual production once per month.</description>
        <inlineHelpText>This is the method used to calculate monthly production. Those systems on Production Estimates (Prod Est) follow established production schedule. Those on Actual report actual production once per month.</inlineHelpText>
        <label>Generation Entry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prod Est</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generator_Status__c</fullName>
        <description>This is the registration status of the SREC Registry Unit in the PJM-GATS system (ACT=Active, INA=Inactive, NIN=Need Info, REJ=Rejected)</description>
        <inlineHelpText>This is the registration status of the SREC Registry Unit in the PJM-GATS system (ACT=Active, INA=Inactive, NIN=Need Info, REJ=Rejected)</inlineHelpText>
        <label>Generator Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJ</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Green_Registration_Number__c</fullName>
        <description>SREC Registry Unit certification number for participation in the Green-e Program</description>
        <inlineHelpText>SREC Registry Unit certification number for participation in the Green-e Program</inlineHelpText>
        <label>Green Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Green_e_Eligible__c</fullName>
        <description>Certifies that renewable attributes associated with SREC Registry Unit are eligible to be traded as Green-e compliant</description>
        <inlineHelpText>Certifies that renewable attributes associated with SREC Registry Unit are eligible to be traded as Green-e compliant</inlineHelpText>
        <label>Green-e Eligible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Status__c</fullName>
        <description>Management Status of SREC Registry Unit. Those in &quot;Transferred&quot; status are not longer managed by Astrum.</description>
        <inlineHelpText>Management Status of SREC Registry Unit. Those in &quot;Transferred&quot; status are not longer managed by Astrum.</inlineHelpText>
        <label>Management Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nameplate_Capacity__c</fullName>
        <description>This is the recorded nameplate capacity for the SREC Registry Unit within the registry system (GATS/GIS)</description>
        <inlineHelpText>This is the recorded nameplate capacity for the SREC Registry Unit within the registry system (GATS/GIS)</inlineHelpText>
        <label>Nameplate Capacity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <label>Owner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Generator Broker/Aggregator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offtaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_DC_RPS__c</fullName>
        <description>Washington, DC RPS program for which SREC Registry Unit is qualified</description>
        <inlineHelpText>Washington, DC RPS program for which SREC Registry Unit is qualified</inlineHelpText>
        <label>Program - DC RPS</label>
        <picklist>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_DE_RPS__c</fullName>
        <description>Delaware RPS program for which SREC Registry Unit is qualified</description>
        <inlineHelpText>Delaware RPS program for which SREC Registry Unit is qualified</inlineHelpText>
        <label>Program - DE RPS</label>
        <picklist>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_IL_RPS__c</fullName>
        <description>Illinois RPS program for which SREC Registry Unit is qualified</description>
        <inlineHelpText>Illinois RPS program for which SREC Registry Unit is qualified</inlineHelpText>
        <label>Program - IL RPS</label>
        <picklist>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_MA_RPS_Class_I__c</fullName>
        <description>Denotes whether or not SREC Registry Unit is qualified for MA RPS Class I compliance</description>
        <inlineHelpText>Denotes whether or not SREC Registry Unit is qualified for MA RPS Class I compliance</inlineHelpText>
        <label>Program - MA RPS Class I</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_MA_Solar_Carve_Out_II__c</fullName>
        <description>Denotes whether or not SREC Registry Unit is qualified for MA Solar Carve-Out II compliance</description>
        <label>Program - MA Solar Carve-Out II</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_MA_Solar_Carve_Out__c</fullName>
        <description>Denotes whether or not SREC Registry Unit is qualified for MA Solar Carve-Out compliance</description>
        <inlineHelpText>Denotes whether or not SREC Registry Unit is qualified for MA Solar Carve-Out compliance</inlineHelpText>
        <label>Program - MA Solar Carve-Out</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_MD_RPS__c</fullName>
        <description>Maryland RPS program for which SREC Registry Unit is qualified</description>
        <inlineHelpText>Maryland RPS program for which SREC Registry Unit is qualified</inlineHelpText>
        <label>Program - MD RPS</label>
        <picklist>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_NJ_RPS__c</fullName>
        <description>New Jersey RPS program for which SREC Registry Unit is qualified</description>
        <inlineHelpText>New Jersey RPS program for which SREC Registry Unit is qualified</inlineHelpText>
        <label>Program - NJ RPS</label>
        <picklist>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_OH_RPS__c</fullName>
        <description>Ohio RPS program for which SREC Registry Unit is qualified</description>
        <inlineHelpText>Ohio RPS program for which SREC Registry Unit is qualified</inlineHelpText>
        <label>Program - OH RPS</label>
        <picklist>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_PA_RPS__c</fullName>
        <description>Pennsylvania RPS program for which SREC Registry Unit is qualified</description>
        <inlineHelpText>Pennsylvania RPS program for which SREC Registry Unit is qualified</inlineHelpText>
        <label>Program - PA RPS</label>
        <picklist>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_WV_RPS__c</fullName>
        <description>West Virginia RPS program for which SREC Registry Unit is qualified</description>
        <inlineHelpText>West Virginia RPS program for which SREC Registry Unit is qualified</inlineHelpText>
        <label>Program - WV RPS</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RTO__c</fullName>
        <description>This is the name of the Regional Transmission Operator territory in which the SREC Registry Unit is located</description>
        <inlineHelpText>This is the name of the Regional Transmission Operator territory in which the SREC Registry Unit is located</inlineHelpText>
        <label>RTO</label>
        <picklist>
            <picklistValues>
                <fullName>PJM Control Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England (ISO New England Control Area)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registry_Account_Holder__c</fullName>
        <description>Name of the NEPOOL GIS or PJM GATS Account Holder responsible for the account under which SREC Registry Unit is registered</description>
        <inlineHelpText>Name of the NEPOOL GIS or PJM GATS Account Holder responsible for the account under which SREC Registry Unit is registered</inlineHelpText>
        <label>Registry Account Holder</label>
        <picklist>
            <picklistValues>
                <fullName>Astrum Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constellation-Astrum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Solar II, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>River Falls REIT Corp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registry_Generation_Start_Date__c</fullName>
        <description>First day of month that production from system is qualified for the production of SRECs as recorded in Registry.</description>
        <inlineHelpText>First day of month that production from system is qualified for the production of SRECs as recorded in Registry.</inlineHelpText>
        <label>Registry Generation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registry_Interconnection_Date__c</fullName>
        <description>Date of Final Interconnection Approval as recorded in Registry, if applicable</description>
        <inlineHelpText>Date of Final Interconnection Approval as recorded in Registry, if applicable</inlineHelpText>
        <label>Registry Interconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registry_Online_Date__c</fullName>
        <description>First day of month that system was online and producing electricty as recorded in Registry, if applicable. Corresponds to Vintage in NEPOOL GIS</description>
        <inlineHelpText>First day of month that system was online and producing electricty as recorded in Registry, if applicable. Corresponds to Vintage in NEPOOL GIS</inlineHelpText>
        <label>Registry Online Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Under_Contract_Until__c</fullName>
        <description>The max end date for all Customer SREC Contracts related to this Registry Unit</description>
        <inlineHelpText>The max end date for all Customer SREC Contracts related to this Registry Unit</inlineHelpText>
        <label>Under Contract Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>Unit City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_County__c</fullName>
        <description>The County in which the SREC Registry Unit is located.</description>
        <inlineHelpText>The County in which the SREC Registry Unit is located.</inlineHelpText>
        <label>Unit County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_ID__c</fullName>
        <description>SREC Registry Unit ID in SREC registry</description>
        <inlineHelpText>SREC Registry Unit ID in SREC registry</inlineHelpText>
        <label>Unit ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Owner_Name__c</fullName>
        <description>Name of Owner of SREC Registry Unit in GATS registry, if provided.</description>
        <inlineHelpText>Name of Owner of SREC Registry Unit in GATS registry, if provided.</inlineHelpText>
        <label>Unit Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>Unit State</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Street_Address_1__c</fullName>
        <description>Street Address 1</description>
        <inlineHelpText>Street Address 1</inlineHelpText>
        <label>Unit Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Street_Address_2__c</fullName>
        <description>Street Address 2</description>
        <inlineHelpText>Street Address 2</inlineHelpText>
        <label>Unit Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Zip_Code__c</fullName>
        <description>Zip Code</description>
        <inlineHelpText>Zip Code</inlineHelpText>
        <label>Unit Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SREC Registry Unit</label>
    <nameField>
        <displayFormat>Unit-{0000000000}</displayFormat>
        <label>SREC Registry Unit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SREC Registry Units</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>GATS_Unit</fullName>
        <active>true</active>
        <label>GATS Unit</label>
    </recordTypes>
    <recordTypes>
        <fullName>GIS_Unit</fullName>
        <active>true</active>
        <label>GIS Unit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>